1. side navbar (done)

*signup second for desiger is scrolling - check all the pages for scrolling
3. client profile   -- paritosh (done)
4. client signup (vh) -- paritosh (done)
6. client forget pass -- paritosh (done)
7. client login vh    -- paritosh (done)

5. Designer profile -- shah
8. complete profile side arrow , props -- paritosh
2. logo
9. forget password (done)

10. client signup
11. file conformation
12. notification 